--- a/src/presentations/application/layout.pug
+++ b/src/presentations/application/layout.pug
@@ -14,7 +14,7 @@ html(lang=lang)
 
     title= title
     meta(name="description" content=description)
-    meta(name="author" content=config.author)
+    meta(name="author" content=dic.t('author'))
     meta(name="keywords" content=config.keywords)
     link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href=`/rss?lang=${lang}`)
 
