Change arguments of Footer component

--- a/src/presentations/pages/Home/index.pug
+++ b/src/presentations/pages/Home/index.pug
@@ -34,4 +34,4 @@ block body
           li.Home--Content--StoryList--Item
             a.Home--Content--StoryList--Item--Link(href=`/posts/${post.id}`)
               +StoryCard(post)
-    +Footer(lang)
+    +Footer(dic)
