--- a/src/presentations/templates/Menu/index.pug
+++ b/src/presentations/templates/Menu/index.pug
@@ -32,4 +32,4 @@ block body
                 .Menu--Content--List--Item--RecipeList--Item
                   .Menu--Content--List--Item--RecipeList--Item--Iced= dic.t('Recipe.ICED')
                   +RecipeLink(item.iced.url, dic)
-    +Footer(lang)
+    +Footer(dic)
