--- a/src/presentations/templates/Product/index.pug
+++ b/src/presentations/templates/Product/index.pug
@@ -27,4 +27,4 @@ block body
       .Product--Content--Content
         .Product--Content--Content--Content
           p!= product.content
-    +Footer(lang)
+    +Footer(dic)
