--- a/src/presentations/templates/Recipe/index.pug
+++ b/src/presentations/templates/Recipe/index.pug
@@ -45,4 +45,4 @@ block body
             .Recipe--Content--StepList--Item--Description= step.description
             if step.note
               .Recipe--Content--StepList--Item--Note= step.note
-    +Footer(lang)
+    +Footer(dic)
