--- a/src/presentations/pages/Post/index.pug
+++ b/src/presentations/pages/Post/index.pug
@@ -19,4 +19,4 @@ block body
       if category.subCategory
         p= category.subCategory.name
     p= post.tags.map(tag => tag.name).join()
-    +Footer(lang)
+    +Footer(dic)
