--- a/src/presentations/pages/Products/index.pug
+++ b/src/presentations/pages/Products/index.pug
@@ -23,4 +23,4 @@ block body
               +Picture(product.thumbnailUrl.square, product.title)
             .Products--Content--ProductList--Item--Name= product.name
             .Products--Content--ProductList--Item--Category= product.category
-    +Footer(lang)
+    +Footer(dic)
