--- a/src/presentations/templates/Product/index.css
+++ b/src/presentations/templates/Product/index.css
@@ -3,6 +3,7 @@
 @import 'components/Footer';
 @import 'components/Navigation';
 @import 'components/Picture';
+@import 'components/ProductCard';
 
 .Product {
   .Product--Content {
@@ -38,22 +39,63 @@
       .Product--Content--Cover--Information {
         vertical-align: top;
         display: inline-block;
-        padding: 16px;
-      }
-    }
+        padding: 24px 12px;
+        width: 100%;
 
-    @media screen and (min-width: calc($width-content / 2)) {
-      .Product--Content--Cover--Pictures {
-        display: inline-block;
-        width: 50%;
+        .Product--Content--Cover--Information--Name {
+          font-size: 1.25rem;
+          font-weight: $font-bold;
+        }
 
-        .Product--Content--Cover--Pictures--Cover {
+        .Product--Content--Cover--Information--Category {
+          font-size: 0.75rem;
+          color: $color-text-secondary;
+        }
+
+        .Product--Content--Cover--Information--Summary {
+          margin: 24px 0;
+        }
+
+        .Product--Content--Cover--Information--Spec {
+          width: 100%;
+          border: $border;
+          font-size: 0.75rem;
+
+          th {
+            padding: 4px 8px;
+            background-color: $color-background;
+
+            & + td {
+              border-left: $border;
+            }
+          }
+
+          td {
+            padding: 4px 12px;
+          }
+        }
+
+        .Product--Content--Cover--Information--Button {
+          display: inline-block;
+          color: $color-white;
+          background-color: #f90;
+          width: 100%;
+          padding: 12px;
+          text-align: center;
+          border-radius: $radius;
+          margin: 20px 0;
         }
       }
 
-      .Product--Content--Information {
-        display: inline-block;
-        width: 50%;
+      @media screen and (min-width: calc($width-content / 2)) {
+        .Product--Content--Cover--Pictures {
+          display: inline-block;
+          width: 45%;
+        }
+
+        .Product--Content--Cover--Information {
+          width: 55%;
+        }
       }
     }
 
@@ -65,6 +107,30 @@
         width: 100%;
         max-width: $width-content;
         margin: 0 auto;
+        padding: 32px 12px;
+      }
+    }
+  }
+
+  .Product--Content--RelatedList {
+    width: 100%;
+    max-width: $width-content;
+    margin: 0 auto;
+
+    .Product--Content--RelatedList--Title {
+      font-weight: $font-bold;
+      padding: 4px 12px;
+    }
+
+    .Product--Content--RelatedList--Item {
+      display: inline-block;
+      width: calc(100% / 3);
+      padding: 12px 12px;
+    }
+
+    @media screen and (min-width: calc($width-content / 2)) {
+      .Product--Content--RelatedList--Item {
+        width: calc(100% / 4);
       }
     }
   }
