Change name for dictionary and components

--- a/src/presentations/components/Header.pug
+++ b/src/presentations/components/Header.pug
@@ -8,8 +8,8 @@ mixin Header(lang)
     a.Header--Link(href="/")
       h1.Header--Link--Logo
         .Header--Link--Logo--Text
-          |ABOUT
-          br
-          |OUR
+          |HIRAYAMA
           br
           |COFFEE
+          br
+          |INSTITUTE
