--- a/src/presentations/components/Footer.pug
+++ b/src/presentations/components/Footer.pug
@@ -5,4 +5,4 @@ mixin Footer(dic)
         a(href="/about-us")= dic.t('Footer.ABOUT_US')
       li.Footer--List--Item
         a(href="/")= dic.t('Footer.SITEMAP')
-    p.Footer--Copyright!= '&copy; ' + dic.t('Footer.copyright')
+    p.Footer--Copyright!= '&copy; ' + dic.t('name') + dic.t('Footer.copyright')
