--- a/src/presentations/components/Navigation.pug
+++ b/src/presentations/components/Navigation.pug
@@ -5,5 +5,5 @@ mixin Navigation(path, dic)
         a.Navigation--List--Item--Link(href="/beverages")= dic.t('Navigation.BEVERAGES')
       li.Navigation--List--Item(class= path.indexOf('/foods') === 0 ? 'Navigation--List--Item__Active' : '')
         a.Navigation--List--Item--Link(href="/foods")= dic.t('Navigation.FOODS')
-      li.Navigation--List--Item(class= path.indexOf('/products') === 0 ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/products")= dic.t('Navigation.PRODUCTS')
+      li.Navigation--List--Item(class= path.indexOf('/goods') === 0 ? 'Navigation--List--Item__Active' : '')
+        a.Navigation--List--Item--Link(href="/goods")= dic.t('Navigation.GOODS')
