Rename Layout vars

--- a/src/presentations/application/layout.pug
+++ b/src/presentations/application/layout.pug
@@ -23,7 +23,7 @@ html(lang=lang)
     meta(property="og:title" content=title)
     meta(property="og:description" content=description)
     meta(property="og:image" content=thumbnailUrl)
-    meta(property="og:type" content=type)
+    meta(property="og:type" content=pageType)
     meta(property="og:url" content=`${config.url}${path}?lang=${lang}`)
     //- Facebook
     meta(property="fb:app_id" content=config.facebookAppId)
