--- a/src/presentations/components/GoodCard.pug
+++ b/src/presentations/components/GoodCard.pug
@@ -3,6 +3,6 @@ include /components/Picture
 mixin GoodCard(good)
   a.GoodCard(href=good.url)
     .GoodCard--Picture
-      +Picture(good.thumbnailUrl.square, good.title)
+      +Picture(good.meta.thumbnailUrl.square, good.title)
     .GoodCard--Name= good.name
     .GoodCard--Category= good.category
