--- a/src/presentations/application/Layout.pug
+++ b/src/presentations/application/Layout.pug
@@ -9,7 +9,7 @@ html(lang=lang)
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5, minimum-scale=1, user-scalable=yes, viewport-fit=cover")
-    link(rel="manifest" href="/manifest.json")
+    link(rel="manifest" href=`/manifest.${lang}.json`)
     link(rel="stylesheet" href="/application/index.css")
 
     title= title
