--- a/src/presentations/components/Footer.pug
+++ b/src/presentations/components/Footer.pug
@@ -2,7 +2,7 @@ mixin Footer(dic)
   footer.Footer
     ul.Footer--List
       li.Footer--List--Item
-        a(href="/about-us")= dic.t('Footer.ABOUT_US')
+        a(href="/about-us")= dic.t('Components.Footer.ABOUT_US')
       li.Footer--List--Item
-        a(href="/")= dic.t('Footer.SITEMAP')
-    p.Footer--Copyright!= '&copy; ' + dic.t('name') + dic.t('Footer.copyright')
+        a(href="/")= dic.t('Components.Footer.SITEMAP')
+    p.Footer--Copyright!= '&copy; ' + dic.t('name') + dic.t('Components.Footer.copyright')
