Support new dictionary for presentational layer

--- a/src/presentations/components/RecipeLink.pug
+++ b/src/presentations/components/RecipeLink.pug
@@ -1,2 +1,2 @@
 mixin RecipeLink(href, dic)
-  a.RecipeLink(href=href)= dic.t('RecipeLink.RECIPE')
+  a.RecipeLink(href=href)= dic.t('Components.RecipeLink.RECIPE')
