--- a/src/presentations/pages/Home/index.pug
+++ b/src/presentations/pages/Home/index.pug
@@ -27,7 +27,7 @@ block body
             = featuredPost.title
 
     .Home--Content
-      .Home--Content--Heading= dic.t('Home.LATEST_ARTICLES')
+      .Home--Content--Heading= dic.t('Pages.Home.LATEST_ARTICLES')
 
       ul.Home--Content--StoryList
         each post in posts
