--- a/src/presentations/templates/Menu/index.pug
+++ b/src/presentations/templates/Menu/index.pug
@@ -11,25 +11,25 @@ block meta
 
 block body
   .Menu
-    +Header(lang)
-    +Navigation(path, dic)
+    +Header(props.header)
+    +Navigation(props.navigation)
     .Menu--Content
       .Menu--Content--CategoryTitle
-        h2= heading
+        h2= props.categoryTitle.heading
       .Menu--Content--List
-        for item in items
+        for item in props.items
           .Menu--Content--List--Item
             .Menu--Content--List--Item--Title= item.name
             .Menu--Content--List--Item--RecipeList
-              if item.default
+              if item.defaults
                 .Menu--Content--List--Item--RecipeList--Item
-                  +RecipeLink(item.default.url, dic)
+                  +RecipeLink(item.defaults)
               if item.hot
                 .Menu--Content--List--Item--RecipeList--Item
                   .Menu--Content--List--Item--RecipeList--Item--Hot= dic.t('meta.recipe.recipeType.HOT')
-                  +RecipeLink(item.hot.url, dic)
+                  +RecipeLink(item.hot)
               if item.iced
                 .Menu--Content--List--Item--RecipeList--Item
                   .Menu--Content--List--Item--RecipeList--Item--Iced= dic.t('meta.recipe.recipeType.ICED')
-                  +RecipeLink(item.iced.url, dic)
-    +Footer(dic)
+                  +RecipeLink(item.iced)
+    +Footer
