--- a/src/presentations/components/RecipeLink.pug
+++ b/src/presentations/components/RecipeLink.pug
@@ -1,2 +1,2 @@
-mixin RecipeLink(href, dic)
-  a.RecipeLink(href=href)= dic.t('Components.RecipeLink.RECIPE')
+mixin RecipeLink(props)
+  a.RecipeLink(href=props.href)= dic.t('Components.RecipeLink.RECIPE')
