--- a/src/presentations/components/Picture.pug
+++ b/src/presentations/components/Picture.pug
@@ -1,7 +1,7 @@
-mixin Picture(src, alt, lazy)
-  picture.Picture(data-lazy=String(lazy))
+mixin Picture(props)
+  picture.Picture(data-lazy=String(props.lazy))
     block
-    if lazy
-      span.Picture--Image(src=src alt=alt)= alt
+    if props.lazy
+      span.Picture--Image(src=props.src alt=props.alt)= props.alt
     else
-      img.Picture--Image(src=src alt=alt)
+      img.Picture--Image(src=props.src alt=props.alt)
