Make a script for templates/Good

--- a/src/presentations/templates/Good/index.pug
+++ b/src/presentations/templates/Good/index.pug
@@ -8,6 +8,7 @@ block import
   include /components/GoodCard
 
 block meta
+  script(src="/templates/Good/bundle.js" defer)
   link(rel="stylesheet" href="/templates/Good/index.css")
 
 block body
