--- a/src/presentations/pages/Goods/index.pug
+++ b/src/presentations/pages/Goods/index.pug
@@ -7,6 +7,7 @@ block import
   include /components/GoodCard
 
 block meta
+  script(src="/pages/Goods/bundle.js" defer)
   link(rel="stylesheet" href="/pages/Goods/index.css")
 
 block body
