--- a/src/presentations/application/Layout.pug
+++ b/src/presentations/application/Layout.pug
@@ -36,7 +36,20 @@ html(lang=props.lang)
     meta(property="twitter:site" content=props.twitterAccount)
     meta(property="twitter:url" content=`${props.baseUrl}${props.path}?lang={props.lang}`)
 
+    script.
+      window.options = {
+        env: '#{props.env}',
+        lang: '#{props.lang}',
+        gaCode: '#{props.gaCode}',
+        route: '#{props.route}',
+      };
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     script
+      include /application/tracker.js
       include /application/service-worker.js
     block meta
   body
