--- a/src/presentations/application/Layout.pug
+++ b/src/presentations/application/Layout.pug
@@ -49,8 +49,7 @@ html(lang=props.lang)
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     script
-      include /application/tracker.js
-      include /application/service-worker.js
+      include ../../public/application/bundle.js
     block meta
   body
     block body
